# ChangeLog for app-text/dos2unix
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/dos2unix/ChangeLog,v 1.158 2015/04/23 06:30:21 jlec Exp $

  23 Apr 2015; Justin Lecher <jlec@gentoo.org> -dos2unix-6.0.5.ebuild,
  -dos2unix-7.2.ebuild:
  Drop old

  23 Apr 2015; Jeroen Roovers <jer@gentoo.org> dos2unix-6.0.6.ebuild:
  Stable for PPC64 (bug #522520).

*dos2unix-7.2.1 (05 Apr 2015)

  05 Apr 2015; Lars Wendler <polynomial-c@gentoo.org> -dos2unix-7.1.ebuild,
  +dos2unix-7.2.1.ebuild:
  Version bump. Removed old.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> dos2unix-6.0.6.ebuild:
  Stable for ppc, wrt bug #522520

  16 Feb 2015; Lars Wendler <polynomial-c@gentoo.org>
  -files/dos2unix-5.2-makefile.patch,
  -files/dos2unix-5.3.1-fix_debug_build.patch,
  -files/dos2unix-6.0.4-pod-encoding.patch:
  Removed unused patches.

*dos2unix-7.2 (16 Feb 2015)

  16 Feb 2015; Lars Wendler <polynomial-c@gentoo.org> -dos2unix-6.0.3.ebuild,
  -dos2unix-7.0.ebuild, +dos2unix-7.2.ebuild,
  +files/dos2unix-7.2-gb18030-test.patch:
  Version bump. Removed old.

  15 Jan 2015; Raúl Porcel <armin76@gentoo.org> dos2unix-6.0.6.ebuild:
  ia64/s390/sh/sparc/x86 stable wrt #522520

  21 Nov 2014; Tobias Klausmann <klausman@gentoo.org> dos2unix-6.0.6.ebuild:
  Stable on alpha, bug 522520

  08 Oct 2014; Manuel Rüger <mrueg@gentoo.org> dos2unix-6.0.6.ebuild:
  Mark stable on amd64. See bug #522520.

*dos2unix-7.1 (07 Oct 2014)

  07 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> +dos2unix-7.1.ebuild:
  Version bump.

  24 Sep 2014; Markus Meier <maekke@gentoo.org> dos2unix-6.0.6.ebuild:
  arm stable, bug #522520

  13 Sep 2014; Markus Meier <maekke@gentoo.org> dos2unix-6.0.5.ebuild:
  arm stable, bug #519022

  13 Sep 2014; Jeroen Roovers <jer@gentoo.org> dos2unix-6.0.6.ebuild:
  Stable for HPPA (bug #522520).

  11 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> +dos2unix-7.0.ebuild: