@@ -1,29 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX dos2unix-7.2-gb18030-test.patch 665 SHA256 42e62557cf44399bb9bca58b6cc559da4dc88f2011f8f274fa4f71df0d980415 SHA512 eba2105dd871e671cc37a4af4a3c4073e9aa1251971800ac3df686efdb03ceade51df3b4f86e70c1e6aca16d001251e0bca7320e13eceab47a1cde1ece8a8135 WHIRLPOOL c88e4bcf56a072485853ece7117c2a083c1fc4161976b4cbf53f4c1f9efa298720daaed26c42ad741a49d02c3e422eb93dc9fc8033f5ee2b7c3ead42b3e00d9b
 DIST dos2unix-6.0.6.tar.gz 339149 SHA256 8abbd4e9a630ef649f5ff359df10786c50b302c1b6515cf99bd787adea23d276 SHA512 6affdcdc34b1f0c8b1bab46ed63af73a62abf80d64b44e951e354d05b420dbdf32a918a1bca5b427120927e1ec3fe5553cf9b7bf000de30d955ff760b6b66e45 WHIRLPOOL dbdf70a0c7dc4b5714184f333c49e438dda22f20cfc8a65ad9dcc662ccc8c01c928097a10e7932d98f398deb408d6168286b86dc550f77c6540806e3e0302d65
 DIST dos2unix-7.2.1.tar.gz 407535 SHA256 53928aa9abbf49939fc0b84f408a4820d11e77e41d832612c37168f98c6945f3 SHA512 63053a5146a18496aed690948850c0f86f9f6a70259d33363a71ec3981ab5b01f20951b338f400d688bc4e4296f944a034dc4f92646a34203cad73c203e41152 WHIRLPOOL 127555201aa2cf37632b849fe1aa4ee190ce784f3fa36a5def46be75395cbc37e52ed394eb4f6efd13bbc752e2279beaf9e6c7d6d8c63ff84deea626e4ab2977
-EBUILD dos2unix-6.0.6.ebuild 1462 SHA256 83c517075c1ab5e98d59056d78b02d3a23a8a7a5b8ee513d00bca246062f7837 SHA512 923f5d8b09b18f1e1dc6cab83ccd602372dfd5c4fe406c787d39805963aa414bd360c18770c7d69b79af0f350dac7a993dea20b60c6ea64b0ec98f399f6d0bfd WHIRLPOOL 7d35be35b53c74b50cc87903c63543093e2f4b593875fe4a5a1a2a7bfff398e5667e0220dda15f97ebe3fd7a5560705993afffb67b17108c30998cf074a904e7
+EBUILD dos2unix-6.0.6.ebuild 1470 SHA256 0f1a696ee3fd4f31ef4772cbef61e2307091efaa86deee90daf0189d772daa86 SHA512 8ff77dddfeea8d01936684cba14fcd376e7672deb15f7918f891e3f0d6226d81e882086ed7af22110cf06c84b6ba0cdecca6ffba0f00f9771846cdf78c1f90f2 WHIRLPOOL 72a826ae9fedb0c1e950ba4d30f2bbfea6378069b4bc16feac2b1fff25785007a2864171e3cedfc93b2b99c9e9a0d5fd39e18ca5bdbeccbd51b6025780b50f20
 EBUILD dos2unix-7.2.1.ebuild 1522 SHA256 60b1a32614ee63b16f573fc95498d54b5fa4ebd01644da9df96691a886ff5797 SHA512 e4332c4dd3c1ce92174c2922ffed891d5ecffb03dea8f6a9f3977501627be925e83eb37faa5152006da25b365c36867509c2934e75f25c5cac6dbbcff1c01971 WHIRLPOOL e3a22b5b05511c5a9df65aeb80443afc346879bea7b3e7fcfc1401032bd81cb48dc3c6bc7954dfb8a26a9524f517843b78b85912b439fb2ca0525f528dc5b892
-MISC ChangeLog 19137 SHA256 1a831130bf673484855512926718c528dcc7b5e5b31851ff7937f0672389272a SHA512 47520980c5a7e631a00468bf21cfb3d6e5af36228e531935658c95581c06187a96e6a3f071f9b9a56a8f5508a859ef6257ff65234e3785b894a40c88daec9f45 WHIRLPOOL 14e28c6633cba9ecb9d79c6a6054880668e7cf51aa1f4bf320511b281ac0de98cbec57b13e25ca75e347707922c89c7d5fe3339284c4c8ae22d201f6100ad9be
+MISC ChangeLog 19258 SHA256 e95656cf6c0f80664c1d6183979ad6a85732f9610c3c3a83aa3b31d8350b44e7 SHA512 d94d65d518116b146776b4da69d00a65f93e84f59b8ed0e212390d0834aa87ff7f70611d142c2d24747f8ea873277b70d22239575fdc301b4c188b6dfc9dc3ed WHIRLPOOL 4b2716d661e9590a7f171d43c16719b9cc32bab91cc34a501dd3f56d63012dd6437cbce701ecc9fc711b95fe17f6ceab0684f798b28f17b97788148f62d40c76
 MISC metadata.xml 166 SHA256 064eb80cc86913e2a47d1088f1b0ebd5b64b5dab1c73d38b8501cd77891cfbbf SHA512 3fc05bf28a906b223e9bb5baeac755dd7e4edb755b5a6c054c3e4d46d294f28df948e1195e71d5a836783daefafa53fe1417aacc0ba17dd49e9b10d51e99c275 WHIRLPOOL 814a3f6a650e4373ac90ba43969b8dab3215f5da936ef5e180fe134adc05a571dc1390c80be173797c421de7f22488b19979353f7aa52536bbfcf6e0541bf748
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.1
+Version: GnuPG v2
 
-iQJ8BAEBCgBmBQJVOJF+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirrmYP/0iWp7XUwUAHfiW1pAocBkEF
-YTh8xd6bnC3xKbFAMcZSJVTJRnq7q2q/r2IUaYIJjIYOKkKp7FTerPaOG/ZdBsWa
-5LsRPAjdbig+sp68X7uKzVoaANbr7WvIExDCpZ9Jy83Wb4L1cpZ1mN8MTf43VnWI
-jrCxdJbPBVybkQt//fWB3xqYBlrhB1xG/monxWiAlbxQP34h71XoPvcptvPY+JCq
-srjEvIKpn8E+/Kpz2czu11g6qCFston0TxLBVTmm+Z/eTzeTmCsmdPft7LE0nNWg
-E3gWWecbXAn5i5uEyhT3Cuu6gyXqKVa2M9Tu6pibEyojROkak62C46JDLfN1Sqw9
-IwojEUtSWNN9Voeor1ef486Z5XQtNvcFXTAQXnLNKzBc4c0ISttcU5dl9nMuKZn6
-09KtDGfGSur13CkTHKLB63Losc1ssrkpwC46/W1DJ7/CvipbHphwQT9NU123GTvo
-Ahf1qYIxsTXJGJMWlV/I9RLMD2KHezzN/RHIV/wMXzJVvqbREmxhkXWYEyaymhjZ
-xHucuFF3DH6HDH5saFR1GhICrmiMtmXKi1cEOwbJ73NRLLLZ0YBjUmeaWK96dsnC
-utOZYSrKiX5N6o3u7EacJ7lWfKnRazwFQxxIJZqcjiP/QxLFbwAg9J2UUGUO0sUU
-QOcNxQN+cvwuBnZ/96LW
-=A1sA
+iQIcBAEBCAAGBQJVOi31AAoJEPiazRVxLXTF1XQQAM8AMFWfQcQHxDJZ/I8swVGS
+9aAc3F69bC1u7PV4Z//CX6OTpcAmJ9aTYUd9fH1ZoYGGwf1acCpwRTUtH781f1WK
+mOIsAw4yNLMqWko7mZuORDU/0UAJfYR6Xb0ucLuMDH1IYottLSB7LE4+9U1vZ6BN
+OAGgQzFtTBi457rJisukgTSM00pWA0PlaiFDlMZntb8d5Mw6d5qgwizljWRlGrAP
+v/eaFL2+OMWloUX8+tvEj3BmxlanUpV62Xe7+1W+TfdOqnwkr5Mns2EqPxdVi/F5
+ogf+Qzc02gxEoen3P8i+xBMtn6Lyu4jYeH83OjQfEhYpz+CL6eTsz95vtgesDkZO
+nCJZu4Wbgw2NeRwSbTFZDJU1yvao6tm4lWEWr9PF9y4OxHXH/8NMKfPgeOFy7EI+
+H5TE42qhuzJK8JOYzC34ZogoLtusxiWmG7C6vFXFZSqhXTqwqJOn3gRRQWTdY9vW
+9mQwLTwoyWeA4niQ/uv8PO5/oygsOdNSvaQdHqth6T3dXRXY2rFtOLaIBRIKH/+Q
+TGhPfE0iCMorJHGsEPyOntbNLS70AiCTkJ2WshBT0kvmkAaISbVUHudDEN1SSxdK
+rhtSc+h7kWLKfTJLwgxDnnn0myk88w/x5QDmy6zQnXMe5ioHPs+4upkzWYJdnKHP
+gyZgy5xO/Sm7zIA/+zqZ
+=3UL9
 -----END PGP SIGNATURE-----
