@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Yapsy-1.10.423.tar.gz 152691 SHA256 9ba7767f63ab591c0ad3fc8b2bd11ac19a0fabb7259bcb1733858eab5bd9b1e1 SHA512 46447ac2cc2583fcb7fe1c89ded74654efc4d3c9ecc79f955db1e0e9875c9ac2f18e12de3b5f0886c34fdbcdadf601523eb2cd1d8e74b24b791f4f6900dcdcc3 WHIRLPOOL 7dbd717a40296f05da0aec09e05b40c039613d0dc8622b337aa21ddc1919c71e48d9e9ed31c8cf4b89a9c06e5752da2eb684bbdcc843c7f1e8e672920e10d20d
+DIST Yapsy-1.11.023.tar.gz 80595 SHA256 7b494e6cd62cc598d6d6f3be49dd45e9b1670b5d341627f60664d7002e4e0539 SHA512 98ce3925084119a7760ee5f8ed8904d6d4d39746918ff3eccfc64dd890a99aede0249dc3c97482fd53df441730083f790aa81d459ba4395e66f39248a5e14d79 WHIRLPOOL 91a15a51f0d4d64082202366a337ae91e433a426dca6f7c8b71470fb9f8354d36e1c45f5434a0c5a7474b2f3cfdc99c03a616402dbe1a4796519bb7a58be11a4
 EBUILD yapsy-1.10.423.ebuild 640 SHA256 cfdd8db4280ae75ac5617a6995f08853e71995eec23b771f4f71e8714ad3f84e SHA512 332184cac01875ee6e9675766db8033e7691c4a850539a0fd43a988a7568ce6be66b28aeffddf80a308dd9b6b60989a1df207555ee04a94bc515823ba890d27d WHIRLPOOL b24103e39c05ccc188d6e52f22a7ad1304a0f9cf876360b24e775fc5b0f8d2c92d7a3659effe9bff458f0f86491db358118661a9cbea6702e19b3ed9cb9f8440
-MISC ChangeLog 2185 SHA256 d5b1821c67b4f9cb2422f7ff53a0663ccde75e3117bda680988a2402697dd547 SHA512 bb5db1f767cbfcc6f22b47a5fc02e856dd4d1496ec69115f30215257fc5f5dc37aaea844fac625cddb9d6b043de14ed40ab3d947b77f41e6892f6ee92b85a249 WHIRLPOOL d7b5d5707980f5fd35484fde5113d677e79f2f80e72a7429400bc0fa3e2ba1be6680840ab9e2f28ba6a54f8dd8bad111d4a4f6a5bebab0d65e2c8909998a90d8
+EBUILD yapsy-1.11.023.ebuild 1040 SHA256 6235a1f16eed810bd5086b83cb18aed41c80d83ba93565a8715c2b448bbbf3d2 SHA512 6efbc52a566d8a47c05818ca30bba48e95b057983f94089999abbc380e34eec22c36b29f3deeb582a42324c4fa473173e564c0e3397b3cf8ef8722e4714cf753 WHIRLPOOL 40307ea9772a945fcc4d755776d0dd485528b525fc5b9842fc9a1a78f527f408980739b12b8e5b763fe904ecc16fe6392c41abfadbd8fc2d5823b7f0602b2b5d
+MISC ChangeLog 2330 SHA256 7211490870c9076eb1b8d7d7aae28dbf6a08f428e3ef1bf036181d9af6c55fc4 SHA512 ddfa53eb6acc3dc04d37d57ee5eb8f824c24cee545b6461e3e719f60ac337f6e95091c75f8985f4e7812b6e0158418d9520f093b447593f1a35254d290e647ea WHIRLPOOL 9e43347a542e3a2a6ca0ea3cb46df6c67006ca21ac2153e6e0ed637b45f7a8ef35f2a8293f23a56bf8b5166f88696405882996b25f319aaa9f4d8f4d71ba5687
 MISC metadata.xml 254 SHA256 f422e27561552239050ffcff80d8de8bc5b2677e6ee8c828cf24d9e2ca0fe5b1 SHA512 9821417d6a2819a873402b46e65c323d0be4869b517ba3800d8fc4194a5ca1db48fa24c44a0faf8d884c9aef8cad78cd038ab39f06df923cc624970451112894 WHIRLPOOL 6f98e3627370eddb95992e261035df649f33c06402896dfd65198c214207ad6ea75b49afa7df16087c956c905358ad053b2738685ecf0ebb73c870784a844e9a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlS4mXsACgkQso7CE7gHKw2E5gCg28grqIMU+w3RtV+ciEGHwtfU
-u8gAn0WNUxsqmnc2MIPzIMYVILkgO9vh
-=oLd/
+iEYEAREIAAYFAlU6LGkACgkQso7CE7gHKw0cLgCgytqeAAlPYsUB7NO+l99+FieS
+hboAoNc2kKCgSrvioWYrEZkMZ3whLFBT
+=JYWx
 -----END PGP SIGNATURE-----
