@@ -4,10 +4,10 @@ DESCRIPTION=Convert DOS or MAC text files to UNIX format or vice versa
 EAPI=5
 HOMEPAGE=http://www.xs4all.nl/~waterlan/dos2unix.html http://sourceforge.net/projects/dos2unix/
 IUSE=debug nls
-KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris
+KEYWORDS=alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris
 LICENSE=BSD-2
 RDEPEND=!app-text/hd2u !app-text/unix2dos virtual/libintl
 SLOT=0
 SRC_URI=http://www.xs4all.nl/~waterlan/dos2unix/dos2unix-6.0.6.tar.gz mirror://sourceforge/dos2unix/dos2unix-6.0.6.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=53d66ad1ee8a8ed2db3e75f193fecffc
+_md5_=aea646b7b14cf9db9361d11ec2a1a066
