@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/yapsy
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/yapsy/ChangeLog,v 1.16 2015/01/16 04:54:05 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/yapsy/ChangeLog,v 1.17 2015/04/24 11:43:21 idella4 Exp $
+
+*yapsy-1.11.023 (24 Apr 2015)
+
+  24 Apr 2015; Ian Delaney <idella4@gentoo.org> +yapsy-1.11.023.ebuild:
+  bump; add doc build, update test phase
 
   16 Jan 2015; Ian Delaney <idella4@gentoo.org> -yapsy-1.10.1.ebuild,
   -yapsy-1.10.2.ebuild, yapsy-1.10.423.ebuild:
