@@ -1,6 +1,9 @@
 # ChangeLog for app-text/dos2unix
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/dos2unix/ChangeLog,v 1.158 2015/04/23 06:30:21 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/dos2unix/ChangeLog,v 1.159 2015/04/24 11:50:11 polynomial-c Exp $
+
+  24 Apr 2015; Lars Wendler <polynomial-c@gentoo.org> dos2unix-6.0.6.ebuild:
+  Stabilize for x86 (bug #547568).
 
   23 Apr 2015; Justin Lecher <jlec@gentoo.org> -dos2unix-6.0.5.ebuild,
   -dos2unix-7.2.ebuild:
